Modernize Java code